--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 /*
- *
- *     Copyright (C) 2016  Carlos
+ *     Copyright (C) 2016 Carlos
  *
  *     This program is free software; you can redistribute it and/or modify
  *     it under the terms of the GNU General Public License as published by
@@ -21,8 +20,9 @@ group 'me.toxz'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'idea'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -30,4 +30,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'com.j256.ormlite:ormlite-core:4.48'
+    compile 'com.j256.ormlite:ormlite-jdbc:4.48'
+    compile 'mysql:mysql-connector-java:5.1.38'
 }
