--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,5 @@
 #
-#
-#     Copyright (C) 2016  Carlos
+#     Copyright (C) 2016 Carlos
 #
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
@@ -17,9 +16,9 @@
 #     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 #
 
-#Mon Jan 04 09:34:08 CST 2016
+#Mon Jan 04 16:47:58 CST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.9-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.9-all.zip
