--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-jdbc:4.48'
     compile 'mysql:mysql-connector-java:5.1.38'
+    compile 'org.controlsfx:controlsfx:8.40.10'
+
 }
