--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,16 @@ $RECYCLE.BIN/
 
 # JIRA plugin
 atlassian-ide-plugin.xml
+### Gradle template
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
