--- a/rbac/build.gradle
+++ b/rbac/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-jdbc:4.48'
     compile 'mysql:mysql-connector-java:5.1.38'
     compile 'org.controlsfx:controlsfx:8.40.10'
+    compile 'com.google.guava:guava:19.0'
 }
